force-app/main/default/objects/Ticket_Request__c/Ticket_Request__c.object-meta.xml
<CustomObject>
    <label>Ticket Request</label>
    <nameField>
        <label>Requested Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>