force-app/main/default/objects/Ticket_Request__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Related_Account__r.Account_Owner_Name__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>