force-app/main/default/objects/Ticket_Request__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <inlineHelpText>What are the next steps with this customer and how will attending an event help our business with them?</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>