force-app/main/default/objects/Ticket_Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets Requests</relationshipLabel>
    <relationshipName>Tickets_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>