force-app/main/default/objects/Ticket_Request__c/fields/Contacts_Guest__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Guest__c</fullName>
    <inlineHelpText>List names for every ticket requested</inlineHelpText>
    <label>Contact&apos;s Guest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>