force-app/main/default/objects/Ticket_Request__c/fields/Controll_Approval_Modal__c.field-meta.xml
<CustomField>
    <fullName>Controll_Approval_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to control modal which appear after creating ticket request record to ask user to submit record for approval or not.</description>
    <label>Controll Approval Modal</label>
    <type>Checkbox</type>
</CustomField>