force-app/main/default/objects/Ticket_Request__c/fields/Current_Year_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Open_Opportunities__c</fullName>
    <formula>Related_Account__r.Current_Year_Open_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>