force-app/main/default/objects/Ticket_Request__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <defaultValue>$User.FirstName + &apos; &apos; +  $User.LastName</defaultValue>
    <label>Employee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>