force-app/main/default/objects/Ticket_Request__c/fields/Event_Name_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_Date__c</fullName>
    <label>Event Name &amp; Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>