force-app/main/default/objects/Ticket_Request__c/fields/Event_Typ__c.field-meta.xml
<CustomField>
    <fullName>Event_Typ__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>