force-app/main/default/objects/Ticket_Request__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta United</fullName>
            </value>
            <value>
                <fullName>Falcons</fullName>
            </value>
            <value>
                <fullName>Special Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>