force-app/main/default/objects/Ticket_Request__c/fields/Number_of_Parking_Passes_Available__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parking_Passes_Available__c</fullName>
    <label>Request No Of Parking Pass</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>