force-app/main/default/objects/Ticket_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tickets Requests (Business Opportunity)</relationshipLabel>
    <relationshipName>Tickets_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>