force-app/main/default/objects/Ticket_Request__c/fields/Other_Employee_Reps_Attending__c.field-meta.xml
<CustomField>
    <fullName>Other_Employee_Reps_Attending__c</fullName>
    <inlineHelpText>Please enter employee name and QLID</inlineHelpText>
    <label>List other NCR reps attending</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>