force-app/main/default/objects/Ticket_Request__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <defaultValue>$User.Phone</defaultValue>
    <label>Phone Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>