force-app/main/default/objects/Ticket_Request__c/fields/Quick_Look_Id__c.field-meta.xml
<CustomField>
    <fullName>Quick_Look_Id__c</fullName>
    <formula>CreatedBy.Quicklook_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Look Id</label>
    <type>Text</type>
</CustomField>