force-app/main/default/objects/Ticket_Request__c/fields/Ticket_Request_Event__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Request_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Request Event</label>
    <referenceTo>Ticket_Request_Event__c</referenceTo>
    <relationshipLabel>Ticket Requests</relationshipLabel>
    <relationshipName>Ticket_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>