force-app/main/default/objects/Ticket_Request__c/fields/Ticket_Typ__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Typ__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>VVIP</fullName>
            </value>
            <value>
                <fullName>Lower Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>