force-app/main/default/objects/Ticket_Request__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Admin/ User Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Assigned</fullName>
            </value>
            <value>
                <fullName>User Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>