force-app/main/default/objects/Ticket_Request__c/fields/Total_Tickets_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Requested__c</fullName>
    <formula>VALUE(TEXT( No_of_Tickets_Requested__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tickets Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>