force-app/main/default/objects/Ticket_Request__c/recordTypes/Ticket_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Ticket_Assignment</fullName>
    <active>true</active>
    <label>Ticket Assignment</label>
</RecordType>