force-app/main/default/objects/Ticket_Request__c/recordTypes/Ticket_Request.recordType-meta.xml
<RecordType>
    <fullName>Ticket_Request</fullName>
    <active>true</active>
    <description>This recordType is for Non-Admins</description>
    <label>Ticket Request</label>
</RecordType>